--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -18,16 +19,22 @@
     "@heroicons/react": "^2.1.5",
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@mui/material": "^5.16.6",
+    "@rcaferati/wac": "^1.0.0",
+    "firebase": "^10.12.5",
     "flowbite-react": "^0.10.1",
     "formik": "^2.4.6",
+    "keen-slider": "^6.8.6",
     "lottie-react": "^2.4.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
+    "react-scroll": "^1.9.0",
     "react-swipeable-views": "^0.14.0",
+    "react-transition-group": "^4.4.5",
     "react-tsparticles": "^2.12.2",
     "sweetalert2": "^11.12.3",
     "tsparticles": "^3.5.0",
