--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,9 @@
 {
   "projects": {
-    "default": "portfolio-jaheda"
-  }
+    "default": "portfolio-alshari",
+    "production": "portfolio-alshari"
+  },
+  "targets": {},
+  "etags": {},
+  "dataconnectEmulatorConfig": {}
 }
